[package]
name = "blockchain"
version = "0.1.0"
authors = ["rodrigo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ring = "0.16.20"
data-encoding = "2.3.2"
bincode = "1.0"
actix-web = "3"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
